# inventory-control

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: tauri-windows-build.yml
app/: app.css  root.tsx  routes.ts
app/components/auth/: force-change-password-dialog.tsx
app/components/common/: combobox.tsx  common-dialogs.tsx  confirm-button.tsx  image-picker.tsx  page-header.tsx
app/components/common/pickers/: item-picker.tsx  operator-picker.tsx  rack-picker.tsx  slot-cascader-picker.tsx  slot-picker.tsx  warehouse-picker.tsx
app/components/layout/: app-shell.tsx
app/components/stock/: helpers.ts  stock-action-dialogs.tsx  types.ts
app/components/stock/forms/: count-form.tsx  inbound-form.tsx  move-form.tsx  outbound-form.tsx  reversal-form.tsx
app/components/ui/: alert-dialog.tsx  button.tsx  calendar.tsx  chart.tsx  command.tsx  date-time-picker.tsx  date.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input-group.tsx  input.tsx  pagination.tsx  popover.tsx  select.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
app/lib/: auth.ts  credentials.ts  photos.ts  tauri.ts  use-photo-list.ts  utils.ts
app/routes/: _layout.tsx  audit.tsx  dashboard.tsx  guard.tsx  items.tsx  login.tsx  operators.tsx  racks.tsx  settings.tsx  stock.tsx  txns.tsx  warehouses.tsx
docs/: 完整规格文档.md
public/: splashscreen.html
scripts/: bump-version.js  changelog.js  flatten-layer-css.js  generate_pfx_and_set_secrets.sh  sync-dev-to-main.sh  sync-main-to-build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: app_cmd.rs  audit_cmd.rs  auth_cmd.rs  command_guard.rs  dashboard_cmd.rs  data_cmd.rs  item_cmd.rs  mod.rs  operator_cmd.rs  paging.rs  photo_cmd.rs  rack_cmd.rs  stock_cmd.rs  system_cmd.rs  txn_cmd.rs  warehouse_cmd.rs
src-tauri/src/domain/: audit.rs  errors.rs  mod.rs
src-tauri/src/infra/: crypto.rs  db.rs  fs.rs  mod.rs
src-tauri/src/repo/: audit_repo.rs  dashboard_repo.rs  item_repo.rs  meta_repo.rs  mod.rs  operator_repo.rs  photo_repo.rs  rack_repo.rs  stock_query_repo.rs  stock_repo.rs  txn_repo.rs  warehouse_repo.rs
src-tauri/src/services/: audit_service.rs  auth_service.rs  dashboard_service.rs  import_export_service.rs  item_service.rs  mod.rs  operator_service.rs  permission_service.rs  photo_service.rs  rack_service.rs  stock_service.rs  system_service.rs  txn_service.rs  warehouse_service.rs
