[package]
name = "inventory-control"
version = "0.1.7"
edition = "2021"

[lib]
name = "inventory_control"
path = "src/lib.rs"
# Android 需要 cdylib
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
csv = "1.3"
tauri-plugin-dialog = "2"

[dependencies.tauri]
version = "2"
features = ["rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"]

[dependencies.tokio]
version = "1.39"
features = ["rt-multi-thread", "macros"]

[dev-dependencies]
tempfile = "3.12"

# Windows 子系统配置 - 隐藏控制台窗口
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
